src/tests/errors/ivdserial/badUnnaturals.ivdserial
The IVD compiler has encountered the following errors
Syntax error on line 19:
    margin: 42, 34, 7; //Wrong number
            ^
Invalid number of arguments to unatural key margin, must be 1 or 4.

Syntax error on line 20:
    margin: ease-in(100ms, graph(linear, 0 @ 1)); //No no
            ^
Unnatural key cannot contain ease specifiers.

Syntax error on line 21:
    margin: delay(100ms); //NUH!
            ^
Unnatural key cannot contain delay specifiers.

---------------------------------------------------
=================================Element========================================
Path: elem
------------------------------------------Body
-----------------------------State default
